Augmentation de la taille du texte / correction du contraste

--- a/style.css
+++ b/style.css
@@ -122,10 +122,6 @@ a:hover {
 .d-bloc .a-btn,
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
-.d-bloc a .icon-sm,
-.d-bloc a .icon-md,
-.d-bloc a .icon-lg,
-.d-bloc a .icon-xl,
 .d-bloc h1 a,
 .d-bloc h2 a,
 .d-bloc h3 a,
@@ -139,10 +135,6 @@ a:hover {
 .d-bloc .a-btn:hover,
 .d-bloc .navbar a:hover,
 .d-bloc .navbar-brand:hover,
-.d-bloc a:hover .icon-sm,
-.d-bloc a:hover .icon-md,
-.d-bloc a:hover .icon-lg,
-.d-bloc a:hover .icon-xl,
 .d-bloc h1 a:hover,
 .d-bloc h2 a:hover,
 .d-bloc h3 a:hover,
@@ -151,6 +143,20 @@ a:hover {
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
     color: rgba(255, 255, 255, 1);
+}
+
+.d-bloc a .icon-sm,
+.d-bloc a .icon-md,
+.d-bloc a .icon-lg,
+.d-bloc a .icon-xl {
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.d-bloc a:hover .icon-sm,
+.d-bloc a:hover .icon-md,
+.d-bloc a:hover .icon-lg,
+.d-bloc a:hover .icon-xl {
+    color: rgba(0, 0, 0, 1);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -677,7 +683,25 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
+}
+.whoarewe {
+    font-size: 22px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.theytrustedus {
+    font-size: 22px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    font-style: italic;
+}
+
+footer .f-color {
+    color: black!important;
 }
 
 .tight-width-whitespace {
